# TUDA-PMPP-CudaMemGather

./: README.md  run.sh
nvbit/test-apps/ex1/: CMakeLists.txt  README (SERIOUSLY).txt  common.h  main.cc  matmul.cc  matmul.h  matrix.cc  matrix.h  mul_cpu.cc  mul_cpu.h  mul_gpu.cu  mul_gpu.h  test.cc  test.h
nvbit/test-apps/vectoradd/: .gdb_history  Makefile  log  log2  vectoradd
nvbit/tools/mem_trace/: Makefile  common.h  inject_funcs.cu  mem_trace.cu
